<resources>
    <string name="app_name">StateQuartersDC</string>
    <string name="txt99Title">1999</string>
    <string name="txtDel">Deleware</string>
    <string name="txtPenn">Pennsylvania</string>
    <string name="txtNJ">New Jersey</string>
    <string name="txtGeo">Georgia</string>
    <string name="txtConn">Connecticut</string>
    <string name="txt00Title">2000</string>
    <string name="txt01Title">2001</string>
    <string name="txt02Title">2002</string>
    <string name="txt03Title">2003</string>
    <string name="txt04Title">2004</string>
    <string name="txt05Title">2005</string>
    <string name="txt06Title">2006</string>
    <string name="txt07Title">2007</string>
    <string name="txt08Title">2008</string>
    <string name="txtMass">Massachusetts</string>
    <string name="txtMary">Maryland</string>
    <string name="txtSC">South Carolina</string>
    <string name="txtNH">New Hampshire</string>
    <string name="txtVir">Virginia</string>
    <string name="txtNY">New York</string>
    <string name="txtNC">North Carolina</string>
    <string name="txtRI">Rhode Island</string>
    <string name="txtVer">Vermont</string>
    <string name="txtKen">Kentucky</string>
    <string name="txtTenn">Tennessee</string>
    <string name="txtOh">Ohio</string>
    <string name="txtLou">Louisiana</string>
    <string name="txtInd">Indiana</string>
    <string name="txtMiss">Mississippi</string>
    <string name="txtIll">Illinois</string>
    <string name="txtAla">Alabama</string>
    <string name="txtMai">Maine</string>
    <string name="txtMisso">Missouri</string>
    <string name="txtArk">Arkansas</string>
    <string name="txtMich">Michigan</string>
    <string name="txtFlo">Florida</string>
    <string name="txtTex">Texas</string>
    <string name="txtIa">Iowa</string>
    <string name="txtWis">Wisconsin</string>
    <string name="txtCa">California</string>
    <string name="txtMinn">Minnesota</string>
    <string name="txtOr">Oregon</string>
    <string name="txtKan">Kansas</string>
    <string name="txtWV">West Virginia</string>
    <string name="txtNev">Nevada</string>
    <string name="txtNeb">Nebraska</string>
    <string name="txtCol">Colorado</string>
    <string name="txtND">North Dakota</string>
    <string name="txtSD">South Dakota</string>
    <string name="txtMon">Montana</string>
    <string name="txtWash">Washington</string>
    <string name="txtId">Idaho</string>
    <string name="txtWy">Wyoming</string>
    <string name="txtUt">Utah</string>
    <string name="txtOk">Oklahoma</string>
    <string name="txtNM">New Mexico</string>
    <string name="txtAri">Arizona</string>
    <string name="txtAlas">Alaska</string>
    <string name="txtHi">Hawaii</string>
    <string name="txtD">D</string>
    <string name="txtP">P</string>
</resources>
